Fixed Static Images Pathing

--- a/client/src/pages/Home/style.css
+++ b/client/src/pages/Home/style.css
@@ -1,6 +1,6 @@
 #page-container {
     padding-top: 0px;
-    background: #e3f2f0;
+    background: rgba(243, 244, 245, 1);
     height: 100vh;
     display: grid;
     }
