--- a/client/src/components/navbar/style.css
+++ b/client/src/components/navbar/style.css
@@ -4,4 +4,11 @@
     width:70px;
     overflow: hidden;
     box-shadow: 1px;
+    display: flex;
+    justify-content: center;
+    }
+#logo{
+    padding-top: 10px;
+    height: 70px;
+    width: 55px;
     }
