--- a/client/src/components/navbar/style.css
+++ b/client/src/components/navbar/style.css
@@ -3,28 +3,27 @@
     background: white;
     width:70px;
     height: 100vh;
-    overflow: hidden;
     box-shadow: 1px;
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     align-items:center;
-    position: relative
+    position: relative;
     }
 .logo-container{
     width: inherit;
-    height: inherit;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     }
 #logo{
-    position: absolute;
     display: inline-block;
     padding-top: 10px;
     height: 70px;
     width: 55px;
     }
 #navbar-items{
-    display:block
+    display:block;
+    height: 40px;
     }
