Added Topbar with UserAvatar
- created a topbar
- added username and usertype
- added user avatar photo
- added notification button

--- a/client/src/pages/home/style.css
+++ b/client/src/pages/home/style.css
@@ -1,7 +1,8 @@
 
 .body-container{
-    position: absolute;
+    top: 138px;
     display: inline-block;
-    width: 100%;
+    width: 93.7vw;
     height: auto;
+    position: absolute;
     }
