--- a/client/src/app/App.css
+++ b/client/src/app/App.css
@@ -31,18 +31,11 @@
         }
     }
 
-
-#page-container {
-    background: rgba(243, 244, 245, 1);
+.page-container {
+    background: rgba(243, 246, 248, 1);
     /*background: white;*/
-    height: 100vh;
     position: relative;
-    overflow: hidden;
-    }
-
-.body-container {
-    position: absolute;
-    display: inline-block;
+    height: 100%;
     width: 100%;
-    height: auto;
+    overflow: hidden;
     }
