--- a/client/src/components/navbar/style.css
+++ b/client/src/components/navbar/style.css
@@ -1,30 +1,31 @@
 
 .nav-container {
     background: var(--navdark);
-    width: 80px;
+    width: 85px;
     height: 100vh;
     display: inline-flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
     /*-webkit-box-shadow: 1px 0 5px -2px #363636;*/
-    box-shadow: 1px 0px 5px -2px #636363;
+    box-shadow: 1px 0 5px -2px #636363;
     }
 
-#logo {
+.logo {
     display: inline-block;
-    padding-top: 25px;
-    height: 55px;
-    width: 45px;
+    margin-top: 40px;
+    /*height: 55px;*/
+    /*width: 45px;*/
+    height: 46px;
+    width: 40px;
     }
 
 .nav-item-container {
     width: inherit;
-    height: 100vh;
+    height: 100%;
     display: inline-flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     min-height: 400px;
     }
 
@@ -33,10 +34,9 @@
     display: inline-flex;
     align-items: center;
     flex-direction: column;
-    justify-content: center;
     height: auto;
     width: auto;
-    padding-top: 20px;
+    padding-top: 25px;
     color: var(--inactive)
 
     }
@@ -46,9 +46,10 @@
     width: 40px;
     position: absolute;
     }
-.icon-label{
+
+.icon-label {
     font-size: 10px;
-    font-weight: 200;
-    padding-top:1px;
+    font-weight: 100;
+    padding-top: 1px;
     margin-top: 5px;
     }
