Renamed TopBar items to Header
changed "top-bar" tags to "header"

--- a/client/src/components/avatar/style.css
+++ b/client/src/components/avatar/style.css
@@ -6,7 +6,7 @@
     align-self: center;
     }
 
-.topbar-icons {
+.header-icons {
     right: 0;
     position: absolute;
     display: grid;
@@ -34,7 +34,7 @@
     align-self: center;
     }
 
-.top-bar-wrapper {
+.header-wrapper {
     position: relative;
     height: 100%;
     width: 100%;
