--- a/client/src/components/avatar/style.css
+++ b/client/src/components/avatar/style.css
@@ -2,35 +2,41 @@
     display: inline-block;
     justify-content: center;
     grid-column: 3 / 4;
-    grid-row: 2 / 3;
+    grid-row: 1 / 2;
     align-self: center;
     }
 
 .header-icons {
-    right: 0;
+    right: 1.5%;
     position: absolute;
     display: grid;
     grid-column: 3 / 4;
-    grid-template-columns: auto 100px 50px;
-    grid-template-rows: 30px 60px auto;
+    grid-template-columns: auto 100px 42px 37px;
+    grid-template-rows: 60px auto auto;
     grid-column-gap: 8px;
     }
 
 .user-full-name {
-    font-weight: normal;
+    font-weight: 700;
     grid-column: 2 / 3;
-    grid-row: 2 / 3;
+    grid-row: 1 / 2;
     word-wrap: break-word;
     align-self: center;
-    justify-self: start;
+    justify-self: center;
     word-break: break-all;
     margin-bottom: 5px;
     }
 
 .user-type {
     grid-column: 1 / 2;
-    grid-row: 2 / 3;
+    grid-row: 1 / 2;
     justify-self: center;
+    align-self: center;
+    }
+.notification{
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
+    justify-self: start;
     align-self: center;
     }
 
