--- a/client/src/components/header/style.css
+++ b/client/src/components/header/style.css
@@ -1,13 +1,42 @@
 .header{
-    display: inline-block;
-    width:93.7vw;
-    height: 20%;
-    position: absolute;
-    min-height: 80px;
+    display: block;
+    width:100%;
+    height: 23%;
+    /*min-height: 100px;*/
     min-width: 600px;
-    background: white;
-    border-bottom: 1px solid rgba(194,205,218,1);
+    margin-left: 2px;
+    background: rgba(255,255,255,1);
+    /*border-bottom: 1px solid var(--divider);*/
     /*box-shadow: 2px 1px 7px -2px #636363;*/
     /*box-shadow: 0 10px 50px -5px rgba(51,71,91,0.12)*/
+    /*box-shadow: 0 2px 8px #f0f1f2;*/
     }
 
+.header-text{
+    position: absolute;
+    left: 2%;
+    display: grid;
+    grid-column: 3 / 4;
+    grid-template-columns: auto 100px auto;
+    grid-template-rows: 30px auto auto 30px;
+    grid-column-gap: 8px;
+    }
+.page-title{
+    grid-column: 2 / 4;
+    grid-row: 2 / 3;
+    justify-self: start;
+    align-self: center;
+    font-size: 27px;
+    font-weight: 600;
+    color: var(--navdark);
+    }
+.current-date{
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
+    justify-self: start;
+    align-self: center;
+    font-size: 12px;
+    color: gray;
+    font-weight: 900;
+    margin-left: 2px;
+    }
