--- a/client/src/components/navbar/style.css
+++ b/client/src/components/navbar/style.css
@@ -1,18 +1,22 @@
 
 .nav-container {
     background: var(--navdark);
-    width: 85px;
+    width: 80px;
     height: 100vh;
+    min-height: 600px;
     display: inline-flex;
     flex-direction: column;
     align-items: center;
     /*-webkit-box-shadow: 1px 0 5px -2px #363636;*/
-    box-shadow: 1px 0 5px -2px #636363;
+    /*box-shadow: 1px 0 5px -2px #636363;*/
+    box-shadow: 2px 1px 7px -2px #636363;
+
     }
 
 .logo {
+    position: absolute;
     display: inline-block;
-    margin-top: 40px;
+    top: 6%;
     /*height: 55px;*/
     /*width: 45px;*/
     height: 46px;
