--- a/client/src/pages/home/style.css
+++ b/client/src/pages/home/style.css
@@ -1,8 +1,33 @@
 
-.body-container{
-    top: 138px;
-    display: inline-block;
-    width: 93.7vw;
-    height: auto;
-    position: absolute;
+.page-body {
+    height: 100%;
     }
+
+.user-list-wrapper {
+    position: relative;
+    display: block;
+    height: 80%;
+    width: 25%;
+    border-radius: 5px;
+    overflow: scroll;
+    background: rgba(255, 255, 255, 1);
+    margin-top: 2px;
+    margin-left: 2px;
+    /*box-shadow: 0 10px 50px -5px rgba(51, 71, 91, 0.12);*/
+    /*box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);*/
+    padding: 20px;
+    /*border: 1px solid var(--divider);*/
+
+    }
+.list-item {
+    font-family:Montserrat, sans-serif !important;
+    font-weight: 600;
+    padding: 20px;
+    border-bottom: none !important;
+    }
+
+.list-user-type {
+    font-size: 10px !important;
+    }
+
+
