--- a/client/src/utilities/colorsFonts.css
+++ b/client/src/utilities/colorsFonts.css
@@ -5,7 +5,8 @@
     --bgcolor: rgba(243, 246, 248, 1);
     --teal: rgba(85, 204, 170, 1);
     --divider: rgba(194,205,218,1);
-    --redish: rgba(1,1,1,1);
+    --darkgreen: rgba(71,121,138,1);
+    --orange: #ff7a59;
 
     }
 /** Black */
