--- a/client/src/pages/home/style.css
+++ b/client/src/pages/home/style.css
@@ -1,33 +1,100 @@
 
 .page-body {
     height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: row;
     }
 
+/*div container entire list + search*/
+
 .user-list-wrapper {
-    position: relative;
-    display: block;
+    display: inline-flex;
+    flex-direction: column;
     height: 80%;
-    width: 25%;
-    border-radius: 5px;
+    width: 30%;
+    align-items: center;
+    min-width:300px;
+    /*border-radius: 5px;*/
     overflow: scroll;
-    background: rgba(255, 255, 255, 1);
-    margin-top: 2px;
+    /*background: rgba(255, 255, 255, 1);*/
     margin-left: 2px;
+    /*margin-top: 2px;*/
+    /*min-width: 300px;*/
     /*box-shadow: 0 10px 50px -5px rgba(51, 71, 91, 0.12);*/
     /*box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);*/
-    padding: 20px;
     /*border: 1px solid var(--divider);*/
 
     }
+.user-list {
+    top: 2%;
+    padding: 0 10px 10px 10px;
+    height: 100%;
+    width: 80%;
+    }
+
+/*list items*/
 .list-item {
-    font-family:Montserrat, sans-serif !important;
+    margin-bottom: 10px;
+    font-family: Montserrat, sans-serif !important;
     font-weight: 600;
-    padding: 20px;
     border-bottom: none !important;
+    padding: 15px 15px 5px 15px !important;
+    width: 100% !important;
+
+    /*design for floating card css*/
+    border-radius: 5px;
+    box-shadow: 0 1px 5px 0 rgba(45,62,80,.12);
+    background: rgba(255, 255, 255, 1) !important;
+
+    }
+.list-item:hover {
+    box-shadow: 0 1px 40px 0 rgba(45,62,80,.12);
     }
 
 .list-user-type {
     font-size: 10px !important;
     }
 
+.list-title {
+    /*color: rgb(71, 130, 120) !important;*/
+    font-weight: 500;
+    }
+/*.list-title:hover {*/
+    /*color: var(--teal);*/
+    /*}*/
+
+.list-description {
+    font-weight: 300 !important;
+    }
+
+.user-search {
+    display: inline-block;
+    width: 60% !important;
+    background-color: var(--bgcolor);
+    }
+
+.item-details-wrapper {
+    margin-top: 10px;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 77%;
+    width: 68%;
+    /*css for floating card design*/
+    border-radius: 5px;
+    background: white;
+    box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);
+    }
+.empty-image{
+    display: block;
+    height: 200px;
+    width: 230px;
+    margin-bottom: 20px;
+    }
+.empty-message{
+    font-family: Montserrat, sans serif;
+    size: 14px;
+    }
 
