--- a/client/src/pages/users/components/header/style.css
+++ b/client/src/pages/users/components/header/style.css
@@ -51,12 +51,30 @@
     }
 
 /*to transfer */
+.header-bottom{
+    position: absolute;
+    width: 100%;
+    height: 80px;
+    bottom: 0;
+    display: flex;
+    flex-direction: row;
+    grid-template-columns: auto auto;
+    }
+.user-search-wrapper{
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    height: inherit;
+    position: relative;
+    width: 30%;
+    min-width: 300px;
+    }
 .user-search {
     position: absolute !important;
-    left: 3%;
-    width: 24% !important;
+    width: 80% !important;
+    min-width: 154px;
     background: var(--bgcolor) !important;
-    bottom: 5%;
+    bottom: 10%;
     grid-column: 2 / 3;
     grid-row: 5 / 6;
     border-radius: 5px;
@@ -77,11 +95,18 @@
 .user-search .ant-input-search-icon {
     display: none;
     }
+.user-tabs-wrapper{
+    display: inline-flex;
+    height: inherit;
+    width: 68%;
+    flex-direction: column;
+    position: relative;
 
+    }
 .user-tabs {
-    position: absolute !important;
-    right: 40%;
-    bottom: 0;
+    position: absolute!important;
+    left: 5%!important;
+    bottom: 0!important;
     }
 
 .user-tabs .ant-tabs-bar {
