--- a/client/src/components/navbar/style.css
+++ b/client/src/components/navbar/style.css
@@ -16,7 +16,7 @@
 .logo {
     position: absolute;
     display: inline-block;
-    top: 6%;
+    top: 40px;
     /*height: 55px;*/
     /*width: 45px;*/
     height: 46px;
