--- a/client/src/utilities/colorsFonts.css
+++ b/client/src/utilities/colorsFonts.css
@@ -1,76 +1,79 @@
 :root {
     --navdark: rgba(39, 44, 47, 1);
     --inactive: rgb(221, 226, 225);
-    --purple: rgba(108,84,208,1);
+    --purple: rgba(108, 84, 208, 1);
     --bgcolor: rgba(243, 246, 248, 1);
     --teal: rgba(85, 204, 170, 1);
-    --divider: rgba(194,205,218,1);
-    --darkgreen: rgba(71,121,138,1);
-    --orange: #ff7a59;
+    --divider: rgba(194, 205, 218, 1);
+    --darkgreen: rgba(71, 121, 138, 1);
+    --lightgreen: rgba(0, 234, 142, 1);
+    --orange:  #ff7a59;
+
 
     }
+
 /** Black */
 @font-face {
-  font-family: "SF Display";
-  font-weight: 900;
-  src: url("https://sf.abarba.me/SF-UI-Display-Black.otf");
-}
+    font-family: "SF Display";
+    font-weight: 900;
+    src: url("https://sf.abarba.me/SF-UI-Display-Black.otf");
+    }
 
 /** Bold */
 @font-face {
-  font-family: "SF Display";
-  font-weight: 700;
-  src: url("https://sf.abarba.me/SF-UI-Display-Bold.otf");
-}
+    font-family: "SF Display";
+    font-weight: 700;
+    src: url("https://sf.abarba.me/SF-UI-Display-Bold.otf");
+    }
 
 /** Heavy */
 @font-face {
-  font-family: "SF Display";
-  font-weight: 800;
-  src: url("https://sf.abarba.me/SF-UI-Display-Heavy.otf");
-}
+    font-family: "SF Display";
+    font-weight: 800;
+    src: url("https://sf.abarba.me/SF-UI-Display-Heavy.otf");
+    }
 
 /** Light */
 @font-face {
-  font-family: "SF Display";
-  font-weight: 200;
-  src: url("https://sf.abarba.me/SF-UI-Display-Light.otf");
-}
+    font-family: "SF Display";
+    font-weight: 200;
+    src: url("https://sf.abarba.me/SF-UI-Display-Light.otf");
+    }
 
 /** Medium */
 @font-face {
-  font-family: "SF Display";
-  font-weight: 500;
-  src: url("https://sf.abarba.me/SF-UI-Display-Medium.otf");
-}
+    font-family: "SF Display";
+    font-weight: 500;
+    src: url("https://sf.abarba.me/SF-UI-Display-Medium.otf");
+    }
 
 /** Regular */
 @font-face {
-  font-family: "SF Display";
-  font-weight: 400;
-  src: url("https://sf.abarba.me/SF-UI-Display-Regular.otf");
-}
+    font-family: "SF Display";
+    font-weight: 400;
+    src: url("https://sf.abarba.me/SF-UI-Display-Regular.otf");
+    }
 
 /** Semibold */
 @font-face {
-  font-family: "SF Display";
-  font-weight: 600;
-  src: url("https://sf.abarba.me/SF-UI-Display-Semibold.otf");
-}
+    font-family: "SF Display";
+    font-weight: 600;
+    src: url("https://sf.abarba.me/SF-UI-Display-Semibold.otf");
+    }
 
 /** Thin */
 @font-face {
-  font-family: "SF Display";
-  font-weight: 300;
-  src: url("https://sf.abarba.me/SF-UI-Display-Thin.otf");
-}
+    font-family: "SF Display";
+    font-weight: 300;
+    src: url("https://sf.abarba.me/SF-UI-Display-Thin.otf");
+    }
 
 /** Ultralight */
 @font-face {
-  font-family: "SF Display";
-  font-weight: 100;
-  src: url("https://sf.abarba.me/SF-UI-Display-Ultralight.otf");
-}
+    font-family: "SF Display";
+    font-weight: 100;
+    src: url("https://sf.abarba.me/SF-UI-Display-Ultralight.otf");
+    }
 
 /*---------------------------------------------------------------------------*
  * SF UI Text
@@ -78,108 +81,108 @@
 
 /** Bold */
 @font-face {
-  font-family: "SF Text";
-  font-weight: 700;
-  src: url("https://sf.abarba.me/SF-UI-Text-Bold.otf");
-}
+    font-family: "SF Text";
+    font-weight: 700;
+    src: url("https://sf.abarba.me/SF-UI-Text-Bold.otf");
+    }
 
 /** Bold Italic */
 @font-face {
-  font-family: "SF Text";
-  font-weight: 700;
-  font-style: italic;
-  src: url("https://sf.abarba.me/SF-UI-Text-BoldItalic.otf");
-}
+    font-family: "SF Text";
+    font-weight: 700;
+    font-style: italic;
+    src: url("https://sf.abarba.me/SF-UI-Text-BoldItalic.otf");
+    }
 
 /** Heavy */
 @font-face {
-  font-family: "SF Text";
-  font-weight: 800;
-  src: url("https://sf.abarba.me/SF-UI-Text-Heavy.otf");
-}
+    font-family: "SF Text";
+    font-weight: 800;
+    src: url("https://sf.abarba.me/SF-UI-Text-Heavy.otf");
+    }
 
 /** Heavy Italic */
 @font-face {
-  font-family: "SF Text";
-  font-weight: 800;
-  font-style: italic;
-  src: url("https://sf.abarba.me/SF-UI-Text-HeavyItalic.otf");
-}
+    font-family: "SF Text";
+    font-weight: 800;
+    font-style: italic;
+    src: url("https://sf.abarba.me/SF-UI-Text-HeavyItalic.otf");
+    }
 
 /** Light */
 @font-face {
-  font-family: "SF Text";
-  font-weight: 200;
-  src: url("https://sf.abarba.me/SF-UI-Text-Light.otf");
-}
+    font-family: "SF Text";
+    font-weight: 200;
+    src: url("https://sf.abarba.me/SF-UI-Text-Light.otf");
+    }
 
 /** Light Italic */
 @font-face {
-  font-family: "SF Text";
-  font-weight: 200;
-  font-style: italic;
-  src: url("https://sf.abarba.me/SF-UI-Text-HeavyItalic.otf");
-}
+    font-family: "SF Text";
+    font-weight: 200;
+    font-style: italic;
+    src: url("https://sf.abarba.me/SF-UI-Text-HeavyItalic.otf");
+    }
 
 /** Medium */
 @font-face {
-  font-family: "SF Text";
-  font-weight: 500;
-  src: url("https://sf.abarba.me/SF-UI-Text-Medium.otf");
-}
+    font-family: "SF Text";
+    font-weight: 500;
+    src: url("https://sf.abarba.me/SF-UI-Text-Medium.otf");
+    }
 
 /** Medium Italic */
 @font-face {
-  font-family: "SF Text";
-  font-weight: 500;
-  font-style: italic;
-  src: url("https://sf.abarba.me/SF-UI-Text-MediumItalic.otf");
-}
+    font-family: "SF Text";
+    font-weight: 500;
+    font-style: italic;
+    src: url("https://sf.abarba.me/SF-UI-Text-MediumItalic.otf");
+    }
 
 /** Regular */
 @font-face {
-  font-family: "SF Text";
-  font-weight: 400;
-  src: url("https://sf.abarba.me/SF-UI-Text-Regular.otf");
-}
+    font-family: "SF Text";
+    font-weight: 400;
+    src: url("https://sf.abarba.me/SF-UI-Text-Regular.otf");
+    }
 
 /** Regular Italic */
 @font-face {
-  font-family: "SF Text";
-  font-weight: 400;
-  font-style: italic;
-  src: url("https://sf.abarba.me/SF-UI-Text-RegularItalic.otf");
-}
+    font-family: "SF Text";
+    font-weight: 400;
+    font-style: italic;
+    src: url("https://sf.abarba.me/SF-UI-Text-RegularItalic.otf");
+    }
 
 /** Semibold */
 @font-face {
-  font-family: "SF Text";
-  font-weight: 600;
-  src: url("https://sf.abarba.me/SF-UI-Text-Semibold.otf");
-}
+    font-family: "SF Text";
+    font-weight: 600;
+    src: url("https://sf.abarba.me/SF-UI-Text-Semibold.otf");
+    }
 
 /** Semibold Italic */
 @font-face {
-  font-family: "SF Text";
-  font-weight: 600;
-  font-style: italic;
-  src: url("https://sf.abarba.me/SF-UI-Text-SemiboldItalic.otf");
-}
+    font-family: "SF Text";
+    font-weight: 600;
+    font-style: italic;
+    src: url("https://sf.abarba.me/SF-UI-Text-SemiboldItalic.otf");
+    }
 
 /** Ultrathin */
 @font-face {
-  font-family: "SF Text";
-  font-weight: 100;
-  src: url("https://sf.abarba.me/SF-UI-Text-Ultrathin.otf");
-}
+    font-family: "SF Text";
+    font-weight: 100;
+    src: url("https://sf.abarba.me/SF-UI-Text-Ultrathin.otf");
+    }
 
 /** Ultrathin Italic */
 @font-face {
-  font-family: "SF Text";
-  font-weight: 100;
-  font-style: italic;
-  src: url("https://sf.abarba.me/SF-UI-Text-UltrathinItalic.otf");
-}
+    font-family: "SF Text";
+    font-weight: 100;
+    font-style: italic;
+    src: url("https://sf.abarba.me/SF-UI-Text-UltrathinItalic.otf");
+    }
 
 /*---------------------------------------------------------------------------*
  * SF Mono
@@ -187,91 +190,91 @@
 
 /** Bold */
 @font-face {
-  font-family: "SF Mono";
-  font-weight: 700;
-  src: url("https://sf.abarba.me/SFMono-Bold.otf");
-}
+    font-family: "SF Mono";
+    font-weight: 700;
+    src: url("https://sf.abarba.me/SFMono-Bold.otf");
+    }
 
 /** Bold Italic */
 @font-face {
-  font-family: "SF Mono";
-  font-weight: 700;
-  font-style: italic;
-  src: url("https://sf.abarba.me/SFMono-BoldItalic.otf");
-}
+    font-family: "SF Mono";
+    font-weight: 700;
+    font-style: italic;
+    src: url("https://sf.abarba.me/SFMono-BoldItalic.otf");
+    }
 
 /** Heavy */
 @font-face {
-  font-family: "SF Mono";
-  font-weight: 800;
-  src: url("https://sf.abarba.me/SFMono-Heavy.otf");
-}
+    font-family: "SF Mono";
+    font-weight: 800;
+    src: url("https://sf.abarba.me/SFMono-Heavy.otf");
+    }
 
 /** Heavy Italic */
 @font-face {
-  font-family: "SF Mono";
-  font-weight: 800;
-  font-style: italic;
-  src: url("https://sf.abarba.me/SFMono-HeavyItalic.otf");
-}
+    font-family: "SF Mono";
+    font-weight: 800;
+    font-style: italic;
+    src: url("https://sf.abarba.me/SFMono-HeavyItalic.otf");
+    }
 
 /** Light */
 @font-face {
-  font-family: "SF Mono";
-  font-weight: 200;
-  src: url("https://sf.abarba.me/SFMono-Light.otf");
-}
+    font-family: "SF Mono";
+    font-weight: 200;
+    src: url("https://sf.abarba.me/SFMono-Light.otf");
+    }
 
 /** Light Italic */
 @font-face {
-  font-family: "SF Mono";
-  font-weight: 200;
-  font-style: italic;
-  src: url("https://sf.abarba.me/SFMono-HeavyItalic.otf");
-}
+    font-family: "SF Mono";
+    font-weight: 200;
+    font-style: italic;
+    src: url("https://sf.abarba.me/SFMono-HeavyItalic.otf");
+    }
 
 /** Medium */
 @font-face {
-  font-family: "SF Mono";
-  font-weight: 500;
-  src: url("https://sf.abarba.me/SFMono-Medium.otf");
-}
+    font-family: "SF Mono";
+    font-weight: 500;
+    src: url("https://sf.abarba.me/SFMono-Medium.otf");
+    }
 
 /** Medium Italic */
 @font-face {
-  font-family: "SF Mono";
-  font-weight: 500;
-  font-style: italic;
-  src: url("https://sf.abarba.me/SFMono-MediumItalic.otf");
-}
+    font-family: "SF Mono";
+    font-weight: 500;
+    font-style: italic;
+    src: url("https://sf.abarba.me/SFMono-MediumItalic.otf");
+    }
 
 /** Regular */
 @font-face {
-  font-family: "SF Mono";
-  font-weight: 400;
-  src: url("https://sf.abarba.me/SFMono-Regular.otf");
-}
+    font-family: "SF Mono";
+    font-weight: 400;
+    src: url("https://sf.abarba.me/SFMono-Regular.otf");
+    }
 
 /** Regular Italic */
 @font-face {
-  font-family: "SF Mono";
-  font-weight: 400;
-  font-style: italic;
-  src: url("https://sf.abarba.me/SFMono-RegularItalic.otf");
-}
+    font-family: "SF Mono";
+    font-weight: 400;
+    font-style: italic;
+    src: url("https://sf.abarba.me/SFMono-RegularItalic.otf");
+    }
 
 /** Semibold */
 @font-face {
-  font-family: "SF Mono";
-  font-weight: 600;
-  src: url("https://sf.abarba.me/SFMono-Semibold.otf");
-}
+    font-family: "SF Mono";
+    font-weight: 600;
+    src: url("https://sf.abarba.me/SFMono-Semibold.otf");
+    }
 
 /** Semibold Italic */
 @font-face {
-  font-family: "SF Mono";
-  font-weight: 600;
-  font-style: italic;
-  src: url("https://sf.abarba.me/SFMono-SemiboldItalic.otf");
-}
+    font-family: "SF Mono";
+    font-weight: 600;
+    font-style: italic;
+    src: url("https://sf.abarba.me/SFMono-SemiboldItalic.otf");
+    }
 
