--- a/client/src/pages/users/components/header/style.css
+++ b/client/src/pages/users/components/header/style.css
@@ -36,7 +36,12 @@
     align-self: center;
     font-size: 27px;
     font-weight: 600;
-    color: var(--navdark);
+    }
+.add-user{
+    justify-self: center;
+    align-self: end;
+    grid-column: 4/5;
+    grid-row: 2/3;
     }
 
 .current-date {
