Added User Stepper w/ File upload
-added a stepper in ant modal
-added file upload for user photo

--- a/client/src/pages/users/components/header/style.css
+++ b/client/src/pages/users/components/header/style.css
@@ -1,3 +1,11 @@
+.ant-modal .add-user-modal{
+    width: 700px!important;
+    }
+.add-user-modal .ant-modal-title {
+    font-family: Montserrat, sans-serif!important;
+    font-size: 15px!important;
+    font-weight: 500!important;
+    }
 .header {
     display: block;
     position: relative;
