Fixed Stepper Resolution
- made stepper adjust to the size of the content

--- a/client/src/pages/users/components/user_stepper/style.css
+++ b/client/src/pages/users/components/user_stepper/style.css
@@ -5,8 +5,10 @@
     background-color: #fafafa;
     min-height: 200px;
     text-align: center;
-    padding-top: 80px;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
     }
 
 
