Initial remittance page design
-clerk view ticketing page
-initalized inventory folders

--- a/client/src/components/navbar/style.css
+++ b/client/src/components/navbar/style.css
@@ -8,8 +8,8 @@
     flex-direction: column;
     align-items: center;
     /*-webkit-box-shadow: 1px 0 5px -2px #363636;*/
-    /*box-shadow: 1px 0 5px -2px #636363;*/
-    box-shadow: 2px 1px 7px -2px #636363;
+    box-shadow: 1px 0 5px -2px #636363;
+    /*box-shadow: 2px 1px 7px -2px #636363;*/
 
     }
 
