--- a/client/src/pages/remittances/components/remittance_navigation/style.css
+++ b/client/src/pages/remittances/components/remittance_navigation/style.css
@@ -1,7 +1,7 @@
 .remittance-nav{
     height: 100%;
     width: 85px;
-    background-color: white;
+    background-color: rgb(63, 70, 74);
     display: inline-flex;
     position: relative;
     box-shadow: 0 1px 5px 0 rgba(45,62,80,.12);
