--- a/client/src/pages/remittances/style.css
+++ b/client/src/pages/remittances/style.css
@@ -4,5 +4,192 @@
     width: calc(100% - 80px);
     height: 100%;
     right: 0;
-    overflow: hidden;
+    overflow: scroll;
+    }
+
+.remittance-page-wrapper {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    }
+
+.remittance-page-body {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    }
+
+.remittance-header {
+    display: block;
+    position: relative;
+    width: inherit;
+    height: 20%;
+    min-height: 100px;
+    margin-left: 2px;
+    min-width: 400px;
+    right: 0;
+    background: rgba(255, 255, 255, 1);
+    /*border-bottom: 1px solid var(--divider);*/
+    /*box-shadow: 2px 1px 7px -2px #636363;*/
+    box-shadow: 0 1px 20px -5px rgba(51, 71, 91, 0.12)
+    /*box-shadow: 0 2px 8px #f0f1f2;*/
+    }
+
+.header-text {
+    top: 2%;
+    position: absolute;
+    left: 2%;
+    display: grid;
+    grid-column: 2 / 4;
+    grid-template-columns: auto 50px 100px auto;
+    grid-template-rows: 30px auto auto 30px;
+    grid-column-gap: 8px;
+    }
+
+.page-icon {
+    grid-column: 2 / 3;
+    grid-row: 2 / 4;
+    justify-self: center;
+    align-self: center;
+    }
+
+.page-title {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+    justify-self: start;
+    align-self: center;
+    font-size: 27px;
+    font-weight: 600;
+    }
+
+.current-date {
+    grid-column: 3 / 6;
+    grid-row: 3 / 4;
+    justify-self: start;
+    align-self: center;
+    font-size: 12px;
+    color: gray;
+    font-weight: 500;
+    margin-left: 2px;
+    }
+
+.filters {
+    display: inline-flex;
+    width: 100%;
+    height: 50px;
+    margin-top: 10px;
+    align-content: center;
+    justify-content: center;
+    }
+
+.filter-box {
+    /*background: rgba(255, 255, 255, 1);*/
+    /*border-radius: 5px;*/
+    border-bottom: 1px solid var(--divider);
+    width: 95%;
+    height: 100%;
+    }
+
+.filter-label {
+    margin-top: 10px;
+    margin-left: 5px;
+    font-size: 12px;
+    font-weight: 700;
+    }
+
+.remittance-lists {
+    height: 71%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    }
+
+.remittance-list-container {
+    position: relative;
+    padding: 15px;
+    width: 30%;
+    height: 100%;
+    min-width: 400px;
+    border-radius: 5px;
+    margin-left: 15px;
+    margin-right: 15px;
+    background: rgba(255,255,255,1);
+    box-shadow: 0 1px 20px -5px rgba(51, 71, 91, 0.12);
+    }
+.label-container{
+    margin-top: 15px;
+    margin-left: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+.shift-label{
+    display: block;
+    margin-right: 15px!important;
+    font-size:40px!important;
+    font-weight: 600!important;
+    }
+.shift-label-secondary{
+
+    font-weight: 700;
+    }
+
+.remittance-list-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: scroll!important;
+    height: 80%;
+    }
+.remittance-list {
+    padding-top: 20px!important;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; /*border-radius: 5px;*/
+    overflow: scroll!important;
+    /*background: rgba(255, 255, 255, 1);*/
+    margin-left: 2px;
+    /*margin-top: 2px;*/
+    /*min-width: 300px;*/
+    /*box-shadow: 0 10px 50px -5px rgba(51, 71, 91, 0.12);*/
+    /*box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);*/
+    /*border: 1px solid var(--divider);*/
+
+    }
+
+/*list items*/
+.rem-list-item {
+    font-family: Montserrat, sans-serif !important;
+    padding: 20px 10px 20px 20px !important;
+    margin-bottom: 5px!important;
+    width: 250px!important;
+    font-weight: 600;
+    border: none!important;
+    }
+.rem-list-item:hover {
+    background: var(--bgcolor);
+    }
+
+.rem-list-user-type {
+    font-size: 10px !important;
+
+    }
+
+.rem-list-title {
+    /*color: rgb(71, 130, 120) !important;*/
+    font-weight: 600;
+    }
+/*.list-title:hover {*/
+    /*color: var(--teal);*/
+    /*}*/
+
+.list-description {
+    font-weight: 300 !important;
     }
