[Broken] Temporary login and url pathing

--- a/client/src/components/navbar/style.css
+++ b/client/src/components/navbar/style.css
@@ -25,6 +25,7 @@
 
 .nav-item-container {
     width: inherit;
+    cursor: pointer;
     height: 100%;
     display: inline-flex;
     flex-direction: column;
