--- a/client/src/pages/remittances/components/remittance_list/style.css
+++ b/client/src/pages/remittances/components/remittance_list/style.css
@@ -1,48 +1,51 @@
 .remittance-list-container {
     position: relative;
     padding: 15px;
-    width: 30%;
     height: 100%;
-    min-width: 400px;
+    min-width: 300px;
     border-radius: 5px;
     margin-left: 15px;
     margin-right: 15px;
-    background: rgba(255,255,255,1);
-    box-shadow: 0 1px 20px -5px rgba(51, 71, 91, 0.12);
+    background: rgba(255, 255, 255, 1);
+    box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12)
     }
-.label-container{
+
+.label-container {
     margin-top: 15px;
     margin-left: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     }
-.shift-label{
+
+.shift-label {
     display: block;
-    margin-right: 15px!important;
-    font-size:40px!important;
-    font-weight: 600!important;
+    margin-right: 15px !important;
+    font-size: 40px !important;
+    font-weight: 600 !important;
     }
-.shift-label-secondary{
+
+.shift-label-secondary {
 
     font-weight: 700;
     }
 
-.remittance-list-wrapper{
+.remittance-list-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow: scroll!important;
+    overflow: scroll !important;
     height: 80%;
     }
+
 .remittance-list {
-    padding-top: 20px!important;
+    padding-top: 20px !important;
     display: inline-flex;
     flex-direction: column;
     justify-content: center;
     align-items: center; /*border-radius: 5px;*/
-    overflow: scroll!important;
+    overflow: scroll !important;
     /*background: rgba(255, 255, 255, 1);*/
     margin-left: 2px;
     /*margin-top: 2px;*/
@@ -57,11 +60,12 @@
 .rem-list-item {
     font-family: Montserrat, sans-serif !important;
     padding: 20px 10px 20px 20px !important;
-    margin-bottom: 5px!important;
-    width: 400px!important;
+    margin-bottom: 5px !important;
+    width: 400px !important;
     font-weight: 600;
-    border: none!important;
+    border: none !important;
     }
+
 .rem-list-item:hover {
     background: var(--bgcolor);
     }
@@ -75,9 +79,10 @@
     /*color: rgb(71, 130, 120) !important;*/
     font-weight: 600;
     }
+
 /*.list-title:hover {*/
-    /*color: var(--teal);*/
-    /*}*/
+/*color: var(--teal);*/
+/*}*/
 
 .list-description {
     font-weight: 300 !important;
