--- a/client/src/pages/remittances/tabs/ticketing/style.css
+++ b/client/src/pages/remittances/tabs/ticketing/style.css
@@ -4,8 +4,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: row;
+
     background: white;
     border-radius: 5px;
     box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1);
-    flex-direction: column;
     }
