--- a/client/src/pages/users/components/user_stepper/style.css
+++ b/client/src/pages/users/components/user_stepper/style.css
@@ -6,12 +6,14 @@
     min-height: 200px;
     text-align: center;
     display: flex;
-    flex-direction: column;
+    flex-direction:column;
     justify-content: center;
     align-content: center;
     }
 
-
 .steps-action {
     margin-top: 24px;
+    }
+.dragger{
+    height: 20%;
     }
