--- a/client/src/pages/remittances/tabs/ticketing/style.css
+++ b/client/src/pages/remittances/tabs/ticketing/style.css
@@ -1,12 +1,85 @@
 .ticketing-tab-body {
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 30% 70%;
+    padding: 5px;
+    /*background: rgba(255, 255, 255, 1);*/
+    /*border-radius: 5px;*/
+    /*box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1);*/
+    }
 
-    background: white;
+.filters {
+    grid-column: 1/2;
+    width: 95%;
     border-radius: 5px;
-    box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1);
+    height: 100%;
+    margin-top: 0!important;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    padding: 20px;
+    background: rgba(152, 201, 246, 0.33);
+    box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);
+    }
+
+.remittance-table {
+    width: 100%;
+    grid-column: 2 / 3;
+    border-radius: 5px;
+    background: rgba(255, 255, 255, 1);
+    box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);
+
+    }
+
+.remittance-table .ant-table-content {
+    /*border: 1px solid #dfe3eb !important;*/
+    border-radius: 5px ! important;
+
+    }
+
+.remittance-table .ant-table-thead > tr > th {
+    /*background: rgba(0, 77, 128, .0392157) !important;*/
+    background: rgba(255, 255, 255, 1);
+    font-weight: 500;
+    color: var(--navdark);
+
+    border-bottom: 1px solid #dfe3eb !important;
+
+    }
+
+.remittance-table * {
+    font-family: Montserrat, sans-serif;
+    border: none !important;
+
+    }
+
+/*.remittance-table .ant-table{*/
+/*border: 1px solid var(--divider)!important;*/
+/*}*/
+.view-button {
+    border: 1px solid var(--orange) !important;
+    color: var(--orange) !important;
+    font-size: 11px !important;
+    font-weight: 500 !important;
+    border-radius: 30px !important;
+    }
+
+.table-avatar {
+    background: deepskyblue;
+    }
+
+.name {
+    margin-left: 20px;
+    font-weight: 600;
+    color: var(--darkgreen)
+    }
+
+.rem-status {
+    color: var(--teal)
+    }
+
+.status-icon {
+    color: #21be4b;
+    margin-right: 10px;
     }
