--- a/client/src/pages/remittances/tabs/ticketing/style.css
+++ b/client/src/pages/remittances/tabs/ticketing/style.css
@@ -19,7 +19,8 @@
     flex-direction: column;
     justify-content: start;
     padding: 20px;
-    background: rgba(152, 201, 246, 0.33);
+    background: rgba(255,255,255,1);
+    /*background: rgba(81, 109, 133, 0.33);*/
     box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);
     }
 
