--- a/client/src/pages/remittances/subpages/supervisor_remittance/style.css
+++ b/client/src/pages/remittances/subpages/supervisor_remittance/style.css
@@ -27,8 +27,8 @@
     position: relative;
     grid-column: 1/2;
     grid-row: 1/4;
-    height: 100%;
-    width: 95%;
+    height: 99%;
+    width: 99%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -38,18 +38,40 @@
     box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);
     }
 
-.sv-pending-requests {
+.sv-deployed-drivers {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     grid-column: 2/3;
     grid-row: 1/2;
-    height: 100%;
+    height: 98%;
     width: 100%;
     box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);
     background: rgba(255, 255, 255, 1);
+    border-radius: 5px;
     }
-.sv-stepper{
-    height: 600px!important;
+
+.sv-history {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    height: 98%;
+    width: 100%;
+    box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);
+    background: rgba(255, 255, 255, 1);
+    border-radius: 5px;
+
     }
-.header-steps-wrapper{
+
+.sv-stepper {
+    height: 600px !important;
+    }
+
+.header-steps-wrapper {
     display: grid;
     position: absolute;
     width: 300px;
@@ -58,30 +80,132 @@
     left: 30%;
     grid-template-rows: 25px 70px auto;
     }
-.header-steps{
+
+.header-steps {
     grid-row: 2/3;
     width: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
     }
+
 .sv-steps-content {
     margin-top: 16px;
-    border: 1px dashed #e9e9e9;
+    /*border: 1px dashed #e9e9e9;*/
     border-radius: 6px;
-    background-color: #fafafa;
     min-height: 200px;
     height: 400px;
-    width: 600px;
+    width: 95%;
     text-align: center;
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     justify-content: center;
     align-content: center;
     }
+
 .steps-action {
     margin-top: 24px;
     }
-.dragger{
-    height: 20%;
+
+.shift-type {
+    height: 50px ! important;
+    padding-top: 10px !important;
+    width: auto;
     }
+
+.content-label {
+    font-size: 20px;
+    }
+
+.rem-first-content *, .rem-second-content * {
+    font-family: Montserrat, sans-serif;
+    }
+
+.rem-second-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    }
+
+.driver-list-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    height: 300px;
+    }
+
+.driver-list {
+    padding: 10px;
+    /*border:2px dashed rgba(0, 77, 128, .0392157) !important;*/
+    border: 1px dashed rgba(71, 121, 138, 0.2) !important;
+    border-radius: 5px;
+    width: 400px !important;
+    overflow: scroll;
+    height: inherit !important;
+    }
+
+.driver-item {
+    border: none !important;
+    padding: 20px !important;
+    }
+
+.driver-item:hover {
+    background: var(--bgcolor);
+    }
+
+.deploy-button {
+    font-size: 11px !important;
+    color: var(--darkgreen) !important;
+    border: 1px solid var(--darkgreen) !important;
+    border-radius: 15px !important;
+    font-weight: 500 !important;
+    }
+
+.driver-deploy-modal {
+    height: 500px !important;
+    }
+
+.driver-deploy-modal * {
+    font-family: Montserrat, sans-serif;
+    }
+
+.driver-deploy-modal p {
+    font-size: 11px;
+    margin-right: 20px;
+    }
+
+.driver-deploy-input {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    }
+
+.driver-deploy-input .ant-input-number-lg {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    }
+
+.driver-deploy-input .ant-input-number-lg {
+    width: 300px !important;
+    padding-left: 5px !important;
+    }
+
+.empty-image {
+    height: 150px;
+    width: 200px;
+    }
+
+/*change step active color*/
+/*.rem-step .ant-steps-item-process .ant-steps-item-icon{*/
+    /*background: var(--orange);*/
+    /*border-color: var(--orange)*/
+    /*}*/
