--- a/client/src/pages/users/components/user_stepper/style.css
+++ b/client/src/pages/users/components/user_stepper/style.css
@@ -6,7 +6,7 @@
     min-height: 200px;
     text-align: center;
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     justify-content: center;
     align-content: center;
     }
@@ -14,6 +14,8 @@
 .steps-action {
     margin-top: 24px;
     }
-.dragger{
-    height: 20%;
+
+.user-dragger .ant-upload .ant-upload-drag {
+    height: 40% !important;
+    position: relative;
     }
