Finished 90% of the Inventory front end with connection to the backend
Accomplished the get all items from back end of the inventory module with minor bugs (item key does not match the table key)

Modal for increase in quantity missing

--- a/client/src/pages/inventory/components/header/style.css
+++ b/client/src/pages/inventory/components/header/style.css
@@ -6,9 +6,10 @@
     font-size: 15px!important;
     font-weight: 500!important;
     }
-.header {
+.inventory-header {
     width: 100%;
     /*min-height: 100px;*/
+    height: 125px;
     min-width: 600px;
     margin-left: 2px;
     background: rgba(255, 255, 255, 1);
