Connected User Page to backend

--- a/client/src/pages/users/components/user_stepper/style.css
+++ b/client/src/pages/users/components/user_stepper/style.css
@@ -15,6 +15,9 @@
 .user-dragger .ant-upload.ant-upload-drag{
     height: 40% !important;
     }
+.user-dragger * {
+    font-size: 11px! important;
+    }
 
 .user-error-msg{
     margin-top: 10px;
