--- a/client/src/pages/remittances/tabs/shift_management/style.css
+++ b/client/src/pages/remittances/tabs/shift_management/style.css
@@ -1,4 +1,4 @@
-.overview-tab-body{
+.overview-tab-body {
     width: 100%;
     height: 100%;
     display: flex;
@@ -6,7 +6,32 @@
     align-items: center;
     background: white;
     border-radius: 5px;
-    box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1);
-        flex-direction: column;
+    box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);
+    flex-direction: column;
+    }
 
+.shift-creation-body{
+    height: 100%;
+    width: 40%;
+    box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1);
+    }
+.date-grid{
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+
+.label-div{
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+.tab-label{
+    font-size: 20px;
+    color: var(--darkgreen);
+    font-weight: 600;
     }
