--- a/client/src/pages/remittances/tabs/shift_management/style.css
+++ b/client/src/pages/remittances/tabs/shift_management/style.css
@@ -52,6 +52,15 @@
     align-items: center;
     flex-direction: row;
     }
+.shifts-label-div {
+    width: 100%;
+    height: 73px;
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    }
 
 .table-label-div {
     width: 100%;
@@ -80,7 +89,7 @@
 .om-tab-body .ant-checkbox-inner{
     background: rgba(196, 196, 196, 0.61) !important;
     }
-.om-tab-body  * {
+.driver-selection * {
     border: none !important;
     }
 
@@ -153,5 +162,10 @@
     justify-content: center;
     align-content: center;
     }
+.supervisor-select{
+    border-radius: 5px!important;
+    font-weight: 600!important;
+    color: var(--orange)!important;
 
+    }
 
