--- a/client/src/pages/remittances/subpages/driver_remittance/style.css
+++ b/client/src/pages/remittances/subpages/driver_remittance/style.css
@@ -25,7 +25,7 @@
 
 .dv-transactions {
     position: relative;
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row: 1/4;
     height: 99%;
     width: 99%;
@@ -38,32 +38,33 @@
     box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);
     }
 
-.dv-pending-requests {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    grid-column: 2/3;
-    grid-row: 1/2;
-    height: 98%;
-    width: 100%;
-    box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);
-    background: rgba(255, 255, 255, 1);
-    border-radius: 5px;
-    }
+/*.dv-pending-requests {*/
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    /*grid-column: 2/3;*/
+    /*grid-row: 1/2;*/
+    /*height: 98%;*/
+    /*width: 100%;*/
+    /*box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);*/
+    /*background: rgba(255, 255, 255, 1);*/
+    /*border-radius: 5px;*/
+    /*}*/
 
-.dv-history {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    grid-column: 2/3;
-    grid-row: 2/3;
-    height: 98%;
-    width: 100%;
-    box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);
-    background: rgba(255, 255, 255, 1);
-    border-radius: 5px;
-    }
+/*.dv-history {*/
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    /*grid-column: 2/3;*/
+    /*grid-row: 2/3;*/
+    /*height: 98%;*/
+    /*width: 100%;*/
+    /*box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);*/
+    /*background: rgba(255, 255, 255, 1);*/
+    /*border-radius: 5px;*/
+    /*}*/
+
 
 
