--- a/client/src/pages/remittances/tabs/shift_management/style.css
+++ b/client/src/pages/remittances/tabs/shift_management/style.css
@@ -138,9 +138,11 @@
     grid-column: 1/2;
     /*grid-row: 2/3;*/
     height: 100%;
+    overflow: scroll;
     }
 
 .pm-shift-pane {
+    overflow: scroll;
     grid-column: 2/3;
     /*grid-row: 2/3;*/
     height: 100%;
@@ -150,6 +152,7 @@
     grid-column: 3/4;
     /*grid-row: 2/3;*/
     height: 100%;
+    overflow: scroll;
     }
 
 .create-shift-button{
