Initial push for Shift Iteration creation

--- a/client/src/pages/remittances/subpages/supervisor_remittance/style.css
+++ b/client/src/pages/remittances/subpages/supervisor_remittance/style.css
@@ -167,6 +167,17 @@
 
 .driver-deploy-modal {
     height: 500px !important;
+    width: 800px! important;
+    top: 10px!important;
+    }
+.driver-deploy-modal .ant-modal-body{
+    display: grid!important;
+    grid-template-columns: 65% 35%;
+    }
+.ticket-div{
+    grid-column: 1/2;
+    height: 100%;
+    width: 100%;
     }
 
 .driver-deploy-modal * {
