--- a/client/src/utilities/colorsFonts.css
+++ b/client/src/utilities/colorsFonts.css
@@ -8,6 +8,7 @@
     --darkgreen: rgba(71, 121, 138, 1);
     --lightgreen: rgba(0, 234, 142, 1);
     --orange:  #ff7a59;
+    --warningred: #d04a43
 
 
     }
